--- a/GREET-API.yml
+++ b/GREET-API.yml
@@ -1,12 +1,2 @@
-spring:
-  boot:
-    admin:
-      client:
-        url: http://localhost:1111/
-  application:
-    name: GREET-API
-management:
-  endpoints:
-    web:
-      exposure:
-        include: '*'
+Good Evening
+
